tests/ui/wf/ice-hir-wf-issue-135341.stderr
error[E0121]: the placeholder `_` is not allowed within types on item signatures for type aliases
  --> $DIR/ice-hir-wf-issue-135341.rs:2:10
   |
LL | type B = _;
   |          ^ not allowed in type signatures

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0121`.
